<resources>
    <string name="app_name">Train_Management</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="not_yet_registered_signup_now">Not yet registered? SignUp Now</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="nic">NIC</string>
    <string name="already_registered">Already Registered?</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="update_user">Update User</string>
    <string name="update">Update</string>
    <string name="disable">Disable</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_booking">BookingActivity</string>
    <string name="add_booking">Add Booking</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="passengers">passengers</string>
</resources>