<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
xmlns:card_view="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:gravity="center"
android:background="@drawable/bg2"
tools:context=".UserManagementActivity">

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:layout_marginBottom="80dp"
    app:cardCornerRadius="30dp"
    app:cardElevation="20dp"
    android:background="@drawable/custom_edittext">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:padding="24dp">


        <TextView
            android:id="@+id/regText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_user"
            android:textAlignment="center"
            android:textColor="#448AFF"
            android:textSize="36sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/fname2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_edittext"
            android:drawablePadding="8dp"
            android:hint="@string/first_name"
            android:inputType="text"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background"
            android:textColorHint="#5C6BC0" />
        <EditText
            android:id="@+id/lname2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_edittext"
            android:drawablePadding="8dp"
            android:hint="@string/last_name"
            android:inputType="text"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background"
            android:textColorHint="#5C6BC0" />

        <EditText
            android:id="@+id/phone2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_edittext"
            android:drawablePadding="8dp"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background"
            android:textColorHint="#5C6BC0" />

        <EditText
            android:id="@+id/date2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_edittext"
            android:drawablePadding="8dp"
            android:inputType="text"
            android:visibility="gone"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background"
            android:textColorHint="#5C6BC0" />
        <Button
            android:id="@+id/upButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/purple"
            android:text="@string/update"
            android:textColor="#263238"
            android:textSize="18sp"
            app:cornerRadius="20dp" />

        <Button
            android:id="@+id/rmButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="#E67784"
            android:text="@string/disable"
            android:textColor="#263238"
            android:textSize="18sp"
            app:cornerRadius="20dp"
            android:onClick="Disable"
            />

        <Button
            android:id="@+id/lgButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="#95F786"
            android:text="@string/log_out"
            android:textColor="#263238"
            android:textSize="18sp"
            android:onClick="LogOut"
            app:cornerRadius="20dp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:itemBackground="@color/purple"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/menu_navigation" />

</LinearLayout>